<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order">

    <CheckBox
        android:id="@+id/product1"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:onClick="clicked"
        android:text="@string/product_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/product2"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:checked="false"
        android:clickable="true"
        android:onClick="clicked"
        android:text="@string/product_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product1" />

    <CheckBox
        android:id="@+id/product3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:checked="false"
        android:clickable="true"
        android:onClick="clicked"
        android:text="@string/product_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product2" />

    <CheckBox
        android:id="@+id/product4"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:checked="false"
        android:clickable="true"
        android:onClick="clicked"
        android:text="@string/product_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product3" />

    <CheckBox
        android:id="@+id/product5"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:checked="false"
        android:clickable="true"
        android:onClick="clicked"
        android:text="@string/product_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product4" />

    <Button
        android:id="@+id/finishOrder"
        android:layout_width="143dp"
        android:layout_height="85dp"
        android:layout_marginBottom="64dp"
        android:background="@android:color/holo_blue_light"
        android:enabled="false"
        android:onClick="alert"
        android:text="@string/finish_order"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/holdButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/holdButton"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="alert"
        android:text="@string/hold_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>